2003-02-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-filter.c (stream_read): Set priv->flushed to
	TRUE if we call g_mime_filter_complete() on our filters.
	(stream_eos): It's not actually the end of the stream until we've
	flushed the filters. This fixes some possible truncation when
	reading from a filtered stream.

2003-02-13  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Bumped version to 2.0.2

	* configure.in: Bumped version to 2.0.2

	* gmime/gmime-parser.c (parser_scan_content): Stop looping if/when
	we find EOS in all cases. Also handle the case where an
	[end-]boundary ends an an EOS rather than a new-line.

2003-02-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/url-scanner.c (g_url_file_end): If the file:// url is
	preceded with some sort of brace, when scanning for the end of the
	url - take this into consideration.
	(g_url_web_end): Same.

2003-02-13  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c: #include <sys/time.h>

2003-02-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/url-scanner.c: Fixed the table to treat >=127 as a CTRL
	character.

	* gmime/gtrie.c (trie_utf8_getc): When we encounter an invalid
	UTF-8 sequence, update in to point to in+1 and return 0xffff.
	(g_trie_add): Handle invalid UTF-8 sequences (ie, c == 0xffff).
	(g_trie_search): Same.

	* gmime/gmime-filter-html.c (html_utf8_getc): Shortcut if inptr ==
	inend by returning 0 and treating it as if we found the
	terminating nul-char.

2003-02-08  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 2.0.1

	* docs/*: A completely new set of documentation.

2003-02-07  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart.c (multipart_remove_part): When the part
	being removed is not the first part in the list, make sure to set
	node->prev->next = node->next -- oops :-)
	(multipart_remove_part_at): Same.

2003-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 2.0.0
